--- a/applications/registration-server/src/test/resources/application.properties
+++ b/applications/registration-server/src/test/resources/application.properties
@@ -7,3 +7,4 @@ registration.server.endpoint=http://registration-server
 security.oauth2.resource.token-info-uri=http://localhost:8999/oauth/check_token
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 application.oauth-enabled=false
+management.health.rabbit.enabled=false
