--- a/applications/timesheets-server/src/test/resources/application.properties
+++ b/applications/timesheets-server/src/test/resources/application.properties
@@ -9,3 +9,4 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 security.oauth2.client.access-token-uri=http://localhost:8999/oauth/token
 security.oauth2.client.grant-type=client_credentials
 application.oauth-enabled=false
+management.health.rabbit.enabled=false
